deploy: cf6214d1157e77a136f2c393914886ee5bc9f742

--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@ September 29, 2021 · One minute read
 <li>Machine/Deep Learning</li>
 <li>Mathematical Modeling</li>
 </ul>
-<p>View some of my public work on <a href=https://github.com/tomanistor>GitHub</a>, or connect with me on <a href=https://www.linkedin.com/in/sean-browning/>LinkedIn</a>.</p>
+<p>View some of my public work on <a href=https://github.com/beansrowning>GitHub</a>, or connect with me on <a href=https://www.linkedin.com/in/sean-browning/>LinkedIn</a>.</p>
 </article>
 <div class=pagination>
 </div>
