--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Sean Browning
 <li>Machine/Deep Learning</li>
 <li>Mathematical Modeling</li>
 </ul>
-<p>View some of my public work on <a href=https://github.com/tomanistor>GitHub</a>, or connect with me on <a href=https://www.linkedin.com/in/sean-browning/>LinkedIn</a>.</p>
+<p>View some of my public work on <a href=https://github.com/beansrowning>GitHub</a>, or connect with me on <a href=https://www.linkedin.com/in/sean-browning/>LinkedIn</a>.</p>
 </div>
 </div>
 </div>
